<resources>
    <string name="app_name">NoteApp</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="Email">Email</string>
    <string name="Password">password</string>
    <string name="name">Name</string>
    <string name="title_activity_main_view">MainView</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="Note">Note</string>
    <string name="list_to_do">To Do</string>
    <string name="ToDo">ToDo</string>
    <string name="Save">Save</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="page_title">Show Note</string>
    <string name="Notes">Notes</string>
    <string name="more">More</string>

    <string name="add">Add</string>
    <string name="content_description_more">More</string>
    <string name="add_note">New Note</string>
    <string name="Title">Title</string>
    <string name="description">Description</string>
    <string name="Show_to_do">Show To Do</string>
    <string name="add_to_do">New To Do</string>
    <string name="alarmDate">Alarm date</string>
</resources>